--- a/notebooks/ob_scanner.ipynb
+++ b/notebooks/ob_scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tqdm\n",
+    "import vectorbtpro as vbt\n",
     "from bitget.ws.bitget_ws_client import BitgetWsClient, SubscribeReq\n",
     "from lib import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,40 +89,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in list(all_symbols):\n",
-    "    print(f\"BITGET:{x}.P\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = 'NEARUSDT'"
+    "# for x in list(all_symbols):\n",
+    "#     print(f\"BITGET:{x}.P\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = {}\n",
+    "for s in tqdm.tqdm(all_symbols):\n",
+    "    df = pd.DataFrame(bitget.fetchOHLCV(symbol=perps.loc[s, 'symbol'], timeframe='5m', limit=1000))\n",
+    "    df = df.set_index(pd.to_datetime(df[0].astype(int), unit='ms')).drop(columns=0).astype(float)\n",
+    "    df.columns=['open', 'high', 'low', 'close', 'volume']\n",
+    "    df.index.name = 'dt'\n",
+    "    dfs.update({s:df})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "screen = []\n",
-    "\n",
     "changes = []\n",
-    "for s in tqdm.tqdm(all_symbols):\n",
-    "    df = pd.DataFrame(bitget.fetchOHLCV(symbol=perps.loc[s, 'symbol'], timeframe='5m', limit=600))\n",
-    "    df = df.set_index(pd.to_datetime(df[0].astype(int), unit='ms')).drop(columns=0).astype(float)\n",
-    "    df.columns=['open', 'high', 'low', 'close', 'volume']\n",
-    "    df.index.name = 'dt'\n",
+    "for s, df in dfs.items():\n",
     "    df['volatility'] = 100*df['close'].pct_change().rolling(288).std()\n",
     "    df['change'] = 100*df['close'].pct_change(288)\n",
     "    df['change_peak'] = df['change'].abs().rolling(200).max()\n",
+    "    df['volma'] = df['volume'].rolling(20).mean()\n",
     "    \n",
     "    screen.append({\n",
     "        'symbol': s,\n",
@@ -178,6 +181,168 @@
    "outputs": [],
    "source": [
     "screen.sort_values('volatility', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OB Backtest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swing_len = 10\n",
+    "\n",
+    "def get_ob(df, swing_len):\n",
+    "    df['upper'] = df['high'].rolling(swing_len).max()\n",
+    "    df['lower'] = df['low'].rolling(swing_len).min()\n",
+    "    df['os'] = np.where(df['high'].shift(swing_len) > df['upper'], 0, np.where(df['low'].shift(swing_len) < df['lower'], 1, np.nan))\n",
+    "    df['os'] = df['os'].ffill()\n",
+    "    \n",
+    "    df['top_y'] = np.where((df['os'] == 0) & (df['os'].shift() != 0), df['high'].shift(swing_len), np.nan)\n",
+    "    df['top_x'] = np.where((df['os'] == 0) & (df['os'].shift() != 0), df.index.to_series().shift(swing_len),pd.NaT)\n",
+    "    df['btm_y'] = np.where((df['os'] == 1) & (df['os'].shift() != 1), df['low'].shift(swing_len), np.nan)\n",
+    "    df['btm_x'] = np.where((df['os'] == 1) & (df['os'].shift() != 1), df.index.to_series().shift(swing_len),pd.NaT)\n",
+    "    df['top_x'] = pd.to_datetime(df['top_x'])\n",
+    "    df['btm_x'] = pd.to_datetime(df['btm_x'])\n",
+    "    df['top_y'] = df['top_y'].ffill()\n",
+    "    df['top_x'] = df['top_x'].ffill()\n",
+    "    df['btm_y'] = df['btm_y'].ffill()\n",
+    "    df['btm_x'] = df['btm_x'].ffill()\n",
+    "    df['top_crossed'] = df.groupby((df['top_y'].dropna().diff() != 0).cumsum()).apply(lambda d: (d['close']>d['top_y']).cumsum().clip(0, 1)).droplevel('top_y')\n",
+    "    df['btm_crossed'] = df.groupby((df['btm_y'].dropna().diff() != 0).cumsum()).apply(lambda d: (d['close']<d['btm_y']).cumsum().clip(0, 1)).droplevel('btm_y')\n",
+    "    for i in df.index[utils.crossover(df['top_crossed'], 0.5)]:\n",
+    "        top_cross_data = df.loc[i]\n",
+    "        top_cross_df = df.loc[top_cross_data['top_x']:i].iloc[:-1]\n",
+    "        ts_bull_ob = top_cross_df['low'].idxmin()\n",
+    "        df.loc[i, 'bull_ob_top'] = top_cross_df.loc[ts_bull_ob, 'high']\n",
+    "        df.loc[i, 'bull_ob_btm'] = top_cross_df.loc[ts_bull_ob, 'low']\n",
+    "        df.loc[i, 'bull_ob_vol'] = top_cross_df.loc[ts_bull_ob, 'volume']\n",
+    "        df.loc[i, 'bull_ob_dt'] = ts_bull_ob\n",
+    "    for i in df.index[utils.crossover(df['btm_crossed'], 0.5)]:\n",
+    "        btm_cross_data = df.loc[i]\n",
+    "        btm_cross_df = df.loc[btm_cross_data['btm_x']:i].iloc[:-1]\n",
+    "        ts_bear_ob = btm_cross_df['high'].idxmax()\n",
+    "        df.loc[i, 'bear_ob_top'] = btm_cross_df.loc[ts_bear_ob, 'high']\n",
+    "        df.loc[i, 'bear_ob_btm'] = btm_cross_df.loc[ts_bear_ob, 'low']\n",
+    "        df.loc[i, 'bear_ob_vol'] = btm_cross_df.loc[ts_bear_ob, 'volume']\n",
+    "        df.loc[i, 'bear_ob_dt'] = ts_bear_ob\n",
+    "    \n",
+    "    for lag in [1, 2, 3, 4]:\n",
+    "        for col in ['bull_ob_top', 'bull_ob_btm', 'bull_ob_vol', 'bear_ob_top', 'bear_ob_btm', 'bear_ob_vol']:\n",
+    "            df[f\"{col}{lag}\"] = df[col].dropna().shift(lag)\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s, df in tqdm.tqdm(dfs.items()):\n",
+    "    get_ob(df, swing_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_return = {}\n",
+    "for s, df in tqdm.tqdm(dfs.items()):\n",
+    "    le = df.groupby((~df['bear_ob_top'].isna()).cumsum()).apply(lambda d: utils.crossover(utils.crossover(d['close'], d['bear_ob_top'].ffill()).cumsum(), 0.5) ).droplevel('bear_ob_top')\n",
+    "    se = df.groupby((~df['bull_ob_btm'].isna()).cumsum()).apply(lambda d: utils.crossover(utils.crossover(d['bull_ob_btm'].ffill(), d['close']).cumsum(), 0.5) ).droplevel('bull_ob_btm')\n",
+    "\n",
+    "    le &= df['bear_ob_top'].ffill() < df['bear_ob_top1'].ffill()\n",
+    "    le &= df['bull_ob_btm'].ffill() > df['bull_ob_btm1'].ffill()\n",
+    "    se &= df['bull_ob_btm'].ffill() > df['bull_ob_btm1'].ffill()\n",
+    "    se &= df['bear_ob_top'].ffill() < df['bear_ob_top1'].ffill()\n",
+    "    le &= df['bear_ob_vol'].ffill() < df['volma']\n",
+    "    se &= df['bull_ob_vol'].ffill() < df['volma']\n",
+    "\n",
+    "    # le &= df['volume'] > df['volma']\n",
+    "    # se &= df['volume'] > df['volma']\n",
+    "\n",
+    "    lim_price = pd.Series(np.where(le, df['bear_ob_top'], np.where(se, df['bull_ob_btm'], np.nan)), df.index).ffill()\n",
+    "    sl_price = pd.Series(np.where(le, df['bear_ob_btm'], np.where(se, df['bull_ob_top'], np.nan)), df.index).ffill()\n",
+    "\n",
+    "    r_mult = 2\n",
+    "    tp_price = pd.Series(np.where(le, lim_price+r_mult*(lim_price-sl_price), np.where(se, lim_price-r_mult*(sl_price-lim_price), np.nan)), df.index).ffill()\n",
+    "\n",
+    "    pf = vbt.Portfolio.from_signals(\n",
+    "        df['close'], open=df['open'], high=df['high'], low=df['low'],\n",
+    "        entries=le,\n",
+    "        short_entries=se,\n",
+    "        freq='5min',\n",
+    "        order_type='limit',\n",
+    "        limit_delta=lim_price,\n",
+    "        sl_stop=sl_price,\n",
+    "        tp_stop=tp_price,\n",
+    "        delta_format='Target',\n",
+    "        limit_tif=13,\n",
+    "        # limit_tif=vbt.Param(np.arange(1, 20, 1)),\n",
+    "        # td_stop=13,\n",
+    "        time_delta_format=0,\n",
+    "    )\n",
+    "    \n",
+    "    total_return.update({s:pf.total_return})\n",
+    "total_return = pd.Series(total_return).sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_return.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.concat([total_return.rename('return'), pd.Series({s: df['change_peak'].iloc[-1] for s, df in dfs.items()})], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = total_return.rename('return').to_frame()\n",
+    "test['change_peak'] = pd.Series({s: df['change_peak'].iloc[-1] for s, df in dfs.items()})\n",
+    "test['volatility'] = pd.Series({s: df['volatility'].iloc[-1] for s, df in dfs.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.Series([test[test['volatility'].rank(pct=True) > x]['return'].skew() for x in np.arange(0.1, 1, 0.1)]).plot()\n",
+    "pd.Series([test[test['change_peak'].rank(pct=True) > x]['return'].skew() for x in np.arange(0.1, 1, 0.1)]).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.plot(kind='scatter', x='volatility', y='return')"
    ]
   },
   {
@@ -266,43 +431,7 @@
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "swing_len = 5\n",
-    "\n",
-    "def get_ob(df, swing_len):\n",
-    "    df['upper'] = df['high'].rolling(swing_len).max()\n",
-    "    df['lower'] = df['low'].rolling(swing_len).min()\n",
-    "    df['os'] = np.where(df['high'].shift(swing_len) > df['upper'], 0, np.where(df['low'].shift(swing_len) < df['lower'], 1, np.nan))\n",
-    "    df['os'] = df['os'].ffill()\n",
-    "    \n",
-    "    df['top_y'] = np.where((df['os'] == 0) & (df['os'].shift() != 0), df['high'].shift(swing_len), np.nan)\n",
-    "    df['top_x'] = np.where((df['os'] == 0) & (df['os'].shift() != 0), df.index.to_series().shift(swing_len),pd.NaT)\n",
-    "    df['btm_y'] = np.where((df['os'] == 1) & (df['os'].shift() != 1), df['low'].shift(swing_len), np.nan)\n",
-    "    df['btm_x'] = np.where((df['os'] == 1) & (df['os'].shift() != 1), df.index.to_series().shift(swing_len),pd.NaT)\n",
-    "    df['top_x'] = pd.to_datetime(df['top_x'])\n",
-    "    df['btm_x'] = pd.to_datetime(df['btm_x'])\n",
-    "    df['top_y'] = df['top_y'].ffill()\n",
-    "    df['top_x'] = df['top_x'].ffill()\n",
-    "    df['btm_y'] = df['btm_y'].ffill()\n",
-    "    df['btm_x'] = df['btm_x'].ffill()\n",
-    "    df['top_crossed'] = df.groupby((df['top_y'].dropna().diff() != 0).cumsum()).apply(lambda d: (d['close']>d['top_y']).cumsum().clip(0, 1)).droplevel('top_y')\n",
-    "    df['btm_crossed'] = df.groupby((df['btm_y'].dropna().diff() != 0).cumsum()).apply(lambda d: (d['close']<d['btm_y']).cumsum().clip(0, 1)).droplevel('btm_y')\n",
-    "    for i in df.index[utils.crossover(df['top_crossed'], 0.5)]:\n",
-    "        top_cross_data = df.loc[i]\n",
-    "        top_cross_df = df.loc[top_cross_data['top_x']:i].iloc[:-1]\n",
-    "        ts_bull_ob = top_cross_df['low'].idxmin()\n",
-    "        df.loc[i, 'bull_ob_top'] = top_cross_df.loc[ts_bull_ob, 'high']\n",
-    "        df.loc[i, 'bull_ob_btm'] = top_cross_df.loc[ts_bull_ob, 'low']\n",
-    "        df.loc[i, 'bull_ob_dt'] = ts_bull_ob\n",
-    "    for i in df.index[utils.crossover(df['btm_crossed'], 0.5)]:\n",
-    "        btm_cross_data = df.loc[i]\n",
-    "        btm_cross_df = df.loc[btm_cross_data['btm_x']:i].iloc[:-1]\n",
-    "        ts_bear_ob = btm_cross_df['high'].idxmax()\n",
-    "        df.loc[i, 'bear_ob_top'] = btm_cross_df.loc[ts_bear_ob, 'high']\n",
-    "        df.loc[i, 'bear_ob_btm'] = btm_cross_df.loc[ts_bear_ob, 'low']\n",
-    "        df.loc[i, 'bear_ob_dt'] = ts_bear_ob\n",
-    "    return df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
